// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatefulButton renders basic usage 1`] = `
.c0 {
  border: 2px solid palevioletred;
}

<div>
  <button
    aria-disabled={false}
    aria-live="assertive"
    className="c0 pgn__stateful-btn pgn__stateful-btn-state-default mr-2 btn btn-primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      className="d-flex align-items-center justify-content-center"
    >
      <span>
        Saved
      </span>
    </span>
  </button>
  <button
    aria-disabled={true}
    aria-live="assertive"
    className="c0 pgn__stateful-btn pgn__stateful-btn-state-pending mr-2 disabled btn btn-primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      className="d-flex align-items-center justify-content-center"
    >
      <span
        className="pgn__stateful-btn-icon"
      >
        <span
          aria-hidden={true}
          className="icon fa fa-spinner fa-spin"
          id="Icon1"
        />
      </span>
      <span>
        Saving
      </span>
    </span>
  </button>
  <button
    aria-disabled={true}
    aria-live="assertive"
    className="c0 pgn__stateful-btn pgn__stateful-btn-state-complete mr-2 disabled btn btn-primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      className="d-flex align-items-center justify-content-center"
    >
      <span
        className="pgn__stateful-btn-icon"
      >
        <span
          aria-hidden={true}
          className="icon fa fa-check-circle"
          id="Icon2"
        />
      </span>
      <span>
        Saved
      </span>
    </span>
  </button>
</div>
`;

exports[`StatefulButton renders custom icons and disable during state 1`] = `
Array [
  .c0 {
  border: 2px solid palevioletred;
}

<button
    aria-disabled={false}
    aria-live="assertive"
    className="c0 pgn__stateful-btn pgn__stateful-btn-state-default mr-2 btn btn-primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      className="d-flex align-items-center justify-content-center"
    >
      <span
        className="pgn__stateful-btn-icon"
      >
        <span
          aria-hidden={true}
          className="fa fa-download"
          id="Icon3"
        />
      </span>
      <span>
        Download
      </span>
    </span>
  </button>,
  .c0 {
  border: 2px solid palevioletred;
}

<button
    aria-disabled={true}
    aria-live="assertive"
    className="c0 pgn__stateful-btn pgn__stateful-btn-state-pending mr-2 disabled btn btn-primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      className="d-flex align-items-center justify-content-center"
    >
      <span
        className="pgn__stateful-btn-icon"
      >
        <span
          aria-hidden={true}
          className="fa fa-spinner fa-spin"
          id="Icon4"
        />
      </span>
      <span>
        Downloading
      </span>
    </span>
  </button>,
  .c0 {
  border: 2px solid palevioletred;
}

<button
    aria-disabled={false}
    aria-live="assertive"
    className="c0 pgn__stateful-btn pgn__stateful-btn-state-complete mr-2 btn btn-primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      className="d-flex align-items-center justify-content-center"
    >
      <span
        className="pgn__stateful-btn-icon"
      >
        <span
          aria-hidden={true}
          className="fa fa-check"
          id="Icon5"
        />
      </span>
      <span>
        Downloaded
      </span>
    </span>
  </button>,
]
`;

exports[`StatefulButton renders custom states 1`] = `
Array [
  .c0 {
  border: 2px solid palevioletred;
}

<button
    aria-disabled={true}
    aria-live="assertive"
    className="c0 pgn__stateful-btn pgn__stateful-btn-state-unedited mr-2 disabled btn btn-primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      className="d-flex align-items-center justify-content-center"
    >
      <span
        className="pgn__stateful-btn-icon"
      >
        <span
          aria-hidden={true}
          className="fa fa-save"
          id="Icon6"
        />
      </span>
      <span>
        Save (no changes)
      </span>
    </span>
  </button>,
  .c0 {
  border: 2px solid palevioletred;
}

<button
    aria-disabled={false}
    aria-live="assertive"
    className="c0 pgn__stateful-btn pgn__stateful-btn-state-edited mr-2 btn btn-primary"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <span
      className="d-flex align-items-center justify-content-center"
    >
      <span
        className="pgn__stateful-btn-icon"
      >
        <span
          aria-hidden={true}
          className="fa fa-save"
          id="Icon7"
        />
      </span>
      <span>
        Save Changes
      </span>
    </span>
  </button>,
]
`;
